--- a/android/PromGameMobile/res/layout/profile_activity.xml
+++ b/android/PromGameMobile/res/layout/profile_activity.xml
@@ -203,7 +203,7 @@
                     android:layout_width="75dp"
                     android:layout_height="25dp"
                     android:layout_marginRight="5dp"
-                    android:background="@color/grey"
+                    android:background="@color/gray"
                     android:gravity="center"
                     android:text="clothes"
                     android:textAllCaps="false"
@@ -214,7 +214,7 @@
                     android:layout_width="75dp"
                     android:layout_height="25dp"
                     android:layout_marginRight="5dp"
-                    android:background="@color/grey"
+                    android:background="@color/gray"
                     android:gravity="center"
                     android:text="shoes"
                     android:textAllCaps="false"
@@ -225,7 +225,7 @@
                     android:layout_width="75dp"
                     android:layout_height="25dp"
                     android:layout_marginRight="5dp"
-                    android:background="@color/grey"
+                    android:background="@color/gray"
                     android:gravity="center"
                     android:text="slim fit"
                     android:textAllCaps="false"
