--- a/android/PromGameMobile/res/values/colors.xml
+++ b/android/PromGameMobile/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="light_gray">#E7E7E7</color>
+    <color name="gray">#AAAAAA</color>
+    <color name="dark_gray">#505050</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
-    <color name="grey">#AAAAAA</color>
     <color name="blue">#0099CC</color>
     <color name="orange">#FF8800</color>
     <color name="red">#CC0000</color>
