--- a/android/PromGameMobile/res/values/dimens.xml
+++ b/android/PromGameMobile/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="default_padding">10dp</dimen>
-    <dimen name="dashboard_icon_size">100dp</dimen>
-    <dimen name="dashboard_icon_text_margin">10dp</dimen>
+    <dimen name="dashboard_icon_size">60dp</dimen>
+    <dimen name="dashboard_icon_margin">8dp</dimen>
+    <dimen name="dashboard_label_margin">12dp</dimen>
+    <dimen name="gap">10dp</dimen>
 </resources>
