--- a/android/PromGameMobile/res/layout/profile_activity.xml
+++ b/android/PromGameMobile/res/layout/profile_activity.xml
@@ -3,8 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="10dp" 
-    android:background="@color/blue_delas">
+    android:padding="@dimen/gap" 
+    android:background="@color/light_gray">
 
     <LinearLayout
         android:id="@+id/LinearLayout1"
