--- a/android/PromGameMobile/res/layout/signup_step2_activity.xml
+++ b/android/PromGameMobile/res/layout/signup_step2_activity.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical" 
     android:padding="10dp" 
-    android:background="@color/blue_delas">
+    android:background="@color/light_gray">
     
 
 </LinearLayout>
