--- a/android/PromGameMobile/res/values/colors.xml
+++ b/android/PromGameMobile/res/values/colors.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="light_gray">#E7E7E7</color>
-    <color name="gray">#AAAAAA</color>
+    <color name="light_gray">#e7e7e7</color>
+    <color name="gray">#aaaaaa</color>
     <color name="dark_gray">#505050</color>
-    <color name="white">#FFFFFF</color>
+    <color name="white">#ffffff</color>
     <color name="black">#000000</color>
-    <color name="blue">#0099CC</color>
-    <color name="orange">#FF8800</color>
-    <color name="red">#CC0000</color>
-    <color name="green">#669900</color>
-    <color name="blue_delas">#7ebbdc</color>
+    <color name="blue">#33b5e5</color>
+    <color name="dark_blue">#0099cc</color>
+    <color name="purple">#aa66cc</color>
+    <color name="dark_purple">#9933cc</color>
+    <color name="orange">#ffbb33</color>
+    <color name="dark_orange">#ff8800</color>
+    <color name="red">#ff4444</color>
+    <color name="dark_red">#cc0000</color>
+    <color name="green">#99cc00</color>
+    <color name="dark_green">#669900</color>
     
 </resources>
