--- a/android/PromGameMobile/res/layout/signup_step1_activity.xml
+++ b/android/PromGameMobile/res/layout/signup_step1_activity.xml
@@ -3,74 +3,42 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/light_gray"
-    android:orientation="vertical"
     android:padding="@dimen/gap" >
 
-<<<<<<< HEAD
     <LinearLayout
-=======
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_gravity="center"
-        android:contentDescription="Step1"
-        android:src="@drawable/abs__ab_bottom_solid_dark_holo"
-        android:layout_marginTop="10dp"
-        android:padding="5dp"
-        android:background="@color/white" />
-
-    <TextView
-        android:id="@+id/question_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Name" />
-
-    <EditText
-        android:id="@+id/editText1"
->>>>>>> dd1b112d4fe46620ff9a90244aecc726feebcf44
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" 
-        android:layout_marginTop="30dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_marginTop="30dp" >
 
         <ImageView
             android:id="@+id/step1_image"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:layout_marginBottom="20dp"
             android:layout_gravity="center"
+            android:layout_marginBottom="20dp"
             android:background="@color/white"
             android:contentDescription="Step1"
             android:padding="5dp"
             android:src="@drawable/abs__ab_bottom_solid_dark_holo" />
 
-<<<<<<< HEAD
         <TextView
-            android:id="@+id/TextView1"
+            android:id="@+id/question_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Name"
             android:textAllCaps="true"
             android:textColor="@color/white"
             android:textStyle="bold" />
-=======
-    <TextView
-        android:id="@+id/counter_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="E-mail" />
->>>>>>> dd1b112d4fe46620ff9a90244aecc726feebcf44
+        
 
+        
         <EditText
             android:id="@+id/name_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPersonName" >
-
-            <requestFocus />
-        </EditText>
+            android:inputType="textPersonName" />
 
         <TextView
             android:id="@+id/TextView2"
@@ -111,8 +79,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:orientation="vertical" 
-        android:layout_marginBottom="50dp">
+        android:layout_marginBottom="50dp"
+        android:orientation="vertical" >
 
         <Button
             android:id="@+id/continue_button"
@@ -123,7 +91,6 @@
             android:textAllCaps="true"
             android:textColor="@color/white"
             android:textStyle="bold" />
-
     </LinearLayout>
 
 </RelativeLayout>
