Changes in Signup e Edit_profile layouts

--- a/android/PromGameMobile/res/values/dimens.xml
+++ b/android/PromGameMobile/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="dashboard_icon_margin">8dp</dimen>
     <dimen name="dashboard_label_margin">12dp</dimen>
     <dimen name="gap">10dp</dimen>
+    <dimen name="gap2">20dp</dimen>
+    <dimen name="gap3">30dp</dimen>
 </resources>
