--- a/android/PromGameMobile/res/layout/edit_profile_activity.xml
+++ b/android/PromGameMobile/res/layout/edit_profile_activity.xml
@@ -11,50 +11,125 @@
         android:orientation="vertical"
         android:layout_marginTop="30dp" >
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/gap"
+            android:text="@string/name"
+            android:textAllCaps="true"
+            android:textColor="@color/gray"
+            android:textStyle="bold"
+            android:textSize="16sp"  />
+                
         <EditText
-            android:id="@+id/editText1"
+            android:id="@+id/name_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="@string/name"
             android:inputType="textPersonName" 
             android:layout_marginBottom="@dimen/gap"/>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/gap"
+            android:text="@string/email"
+            android:textAllCaps="true"
+            android:textColor="@color/gray"
+            android:textStyle="bold"
+            android:textSize="16sp"  />
+        
         <EditText
-            android:id="@+id/editText2"
+            android:id="@+id/email_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="@string/email"
             android:inputType="textEmailAddress"
             android:layout_marginBottom="@dimen/gap" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/gap"
+            android:text="@string/password"
+            android:textAllCaps="true"
+            android:textColor="@color/gray"
+            android:textStyle="bold"
+            android:textSize="16sp"  />
+        
         <EditText
-            android:id="@+id/editText3"
+            android:id="@+id/pass_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="@string/password"
             android:inputType="textPassword"
             android:layout_marginBottom="@dimen/gap" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/gap"
+            android:text="@string/birthday"
+            android:textAllCaps="true"
+            android:textColor="@color/gray"
+            android:textStyle="bold"
+            android:textSize="16sp"  />
+        
         <EditText
-            android:id="@+id/editText4"
+            android:id="@+id/birth_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="@string/birthday"
             android:inputType="date"
             android:layout_marginBottom="@dimen/gap" />
 
-        <EditText
-            android:id="@+id/editText5"
-            android:layout_width="match_parent"
+		<TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="@string/address"
-            android:inputType="textPostalAddress"
-            android:layout_marginBottom="@dimen/gap" />
+            android:paddingLeft="@dimen/gap"
+            android:text="@string/address"
+            android:textAllCaps="true"
+            android:textColor="@color/gray"
+            android:textStyle="bold"
+            android:textSize="16sp"  />
+		
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <EditText
+                android:id="@+id/cod1_edit_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="4"
+                android:inputType="number" />
+
+            <EditText
+                android:id="@+id/cod2_edit_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="3"
+                android:inputType="number" />
+
+            <EditText
+                android:id="@+id/port_edit_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="4"
+                android:inputType="number" />
+
+            <EditText
+                android:id="@+id/andar_edit_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="5"
+                android:inputType="text" />
+
+        </LinearLayout>
         
     </LinearLayout>
 
@@ -62,7 +137,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="@dimen/gap3"
         android:orientation="vertical" >
 
         <Button
