--- a/android/PromGameMobile/res/layout/signup_step1_activity.xml
+++ b/android/PromGameMobile/res/layout/signup_step1_activity.xml
@@ -17,20 +17,22 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginBottom="30dp"
-            android:text="Step 1"
+            android:text="@string/step1"
             android:textAllCaps="true"
             android:textColor="@color/white"
             android:textStyle="bold" 
             android:textSize="26sp"/>
         
-         <!--  <TextView
+         <TextView
             android:id="@+id/question_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Name"
+            android:paddingLeft="@dimen/gap"
+            android:text="@string/name"
             android:textAllCaps="true"
-            android:textColor="@color/white"
-            android:textStyle="bold" /> -->
+            android:textColor="@color/gray"
+            android:textStyle="bold"
+            android:textSize="16sp" />
 
         <EditText
             android:id="@+id/name_text"
@@ -38,18 +40,18 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
-            android:hint="@string/name"
-            android:layout_marginBottom="@dimen/gap" />
+            android:layout_marginBottom="@dimen/gap2" />
 
-        <!-- <TextView
+        <TextView
             android:id="@+id/TextView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="E-mail"
+            android:paddingLeft="@dimen/gap"
+            android:text="@string/email"
             android:textAllCaps="true"
-            android:textColor="@color/white"
-            android:textStyle="bold" /> -->
+            android:textColor="@color/gray"
+            android:textStyle="bold"
+            android:textSize="16sp" /> 
 
         <EditText
             android:id="@+id/email_text"
@@ -57,18 +59,18 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textEmailAddress"
-            android:hint="@string/email"
-            android:layout_marginBottom="@dimen/gap" />
+            android:layout_marginBottom="@dimen/gap2" />
 
-        <!--  <TextView
+        <TextView
             android:id="@+id/TextView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="Password"
+            android:paddingLeft="@dimen/gap"
+            android:text="@string/password"
             android:textAllCaps="true"
-            android:textColor="@color/white"
-            android:textStyle="bold" /> -->
+            android:textColor="@color/gray"
+            android:textStyle="bold"
+            android:textSize="16sp" />
 
         <EditText
             android:id="@+id/password_text"
@@ -76,15 +78,15 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPassword" 
-            android:hint="@string/password"
-            android:layout_marginBottom="@dimen/gap" />
+            android:layout_marginBottom="@dimen/gap2" />
+        
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="@dimen/gap3"
         android:orientation="vertical" >
 
         <Button
