--- a/android/PromGameMobile/res/layout/signup_step2_activity.xml
+++ b/android/PromGameMobile/res/layout/signup_step2_activity.xml
@@ -19,19 +19,21 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginBottom="30dp"
-            android:text="Step 2"
+            android:text="@string/step2"
             android:textAllCaps="true"
             android:textColor="@color/white"
             android:textStyle="bold" 
             android:textSize="26sp"/>
 
-        <!--<TextView
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Birthday"
+            android:paddingLeft="@dimen/gap"
+            android:text="@string/birthday"
             android:textAllCaps="true"
-            android:textColor="@color/white"
-            android:textStyle="bold" />-->
+            android:textColor="@color/gray"
+            android:textStyle="bold"
+            android:textSize="16sp"  />
 
         <EditText
             android:id="@+id/birthday_text"
@@ -39,29 +41,55 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="date"
-            android:hint="@string/birthday"
-            android:layout_marginBottom="@dimen/gap" >
+            android:layout_marginBottom="@dimen/gap2" />
 
-            <requestFocus />
-        </EditText>
-
-        <!--<TextView
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="Address"
+            android:paddingLeft="@dimen/gap"
+            android:text="@string/address"
             android:textAllCaps="true"
-            android:textColor="@color/white"
-            android:textStyle="bold" />-->
+            android:textColor="@color/gray"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
-        <EditText
-            android:id="@+id/address_text"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPostalAddress" 
-            android:hint="@string/address"
-            android:layout_marginBottom="@dimen/gap"/>
+            android:layout_height="wrap_content" >
+
+            <EditText
+                android:id="@+id/editText1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="4"
+                android:inputType="number" />
+
+            <EditText
+                android:id="@+id/editText2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="3"
+                android:inputType="number" />
+
+            <EditText
+                android:id="@+id/editText3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="4"
+                android:inputType="number" />
+
+            <EditText
+                android:id="@+id/editText4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="5"
+                android:inputType="text" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
@@ -70,7 +98,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:orientation="vertical" 
-        android:layout_marginBottom="50dp" >
+        android:layout_marginBottom="@dimen/gap3" >
 
         <Button
             android:id="@+id/continue_button"
