--- a/android/PromGameMobile/res/values/dimens.xml
+++ b/android/PromGameMobile/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="dashboard_icon_margin">8dp</dimen>
     <dimen name="dashboard_label_margin">12dp</dimen>
     <dimen name="gap">10dp</dimen>
+    <dimen name="button_primary_text_size">14sp</dimen>
 </resources>
