--- a/android/PromGameMobile/res/layout/promotion_activity.xml
+++ b/android/PromGameMobile/res/layout/promotion_activity.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -30,5 +29,5 @@
         android:text="Slide to play"
         android:background="@color/dark_green"
         android:textColor="@color/white" />
-
+    
 </LinearLayout>
