RegistrationActivity is now called SignupActivity. Its UI is now almost completed. To do next: API call.

--- a/android/PromGameMobile/res/values/styles.xml
+++ b/android/PromGameMobile/res/values/styles.xml
@@ -1,3 +1,8 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <style name="SignupStep">
+        <item name="android:width">110dp</item>
+        <item name="android:height">110dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:background">@drawable/step_circle</item>
+    </style>
 </resources>
