--- a/android/PromGameMobile/res/layout/authentication_activity.xml
+++ b/android/PromGameMobile/res/layout/authentication_activity.xml
@@ -53,7 +53,6 @@
             android:onClick="handleFacebookConnection"
             android:text="@string/sign_in_with_facebook"
             android:textAllCaps="true"
-            android:textSize="@dimen/button_primary_text_size"
             style="@style/FacebookButtonAppTheme" />
 
         <Button
@@ -62,9 +61,8 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-light"
             android:onClick="handleSignUp"
-            android:text="@string/sign_up"
+            android:text="@string/sign_up_with_email"
             android:textAllCaps="true"
-            android:textSize="@dimen/button_primary_text_size"
             style="@style/WhiteButtonAppTheme" />
 
         <TextView
@@ -118,7 +116,6 @@
             android:onClick="handleLogin"
             android:text="@string/log_in"
             android:textAllCaps="true"
-            android:textSize="@dimen/button_primary_text_size"
             style="@style/WhiteButtonAppTheme" />
 
         <Button
