--- a/android/PromGameMobile/res/values-v11/app_styles.xml
+++ b/android/PromGameMobile/res/values-v11/app_styles.xml
@@ -10,11 +10,14 @@
     
     <style name="WhiteButtonAppTheme" parent="android:Widget.Holo.Light.Button">
         <item name="android:background">@drawable/btn_white_holo_light</item>
+        <item name="android:textSize">@dimen/button_primary_text_size</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="FacebookButtonAppTheme" parent="android:Widget.Holo.Light.Button">
         <item name="android:background">@drawable/btn_facebook_holo_light</item>
-        <item name="android:textColor">#ffffff</item>
+        <item name="android:textSize">@dimen/button_primary_text_size</item>
+        <item name="android:textColor">@color/white</item>
     </style>
     
     <style name="WhiteImageButtonAppTheme" parent="android:Widget.Holo.Light.ImageButton">
