--- a/android/PromGameMobile/res/values/app_styles.xml
+++ b/android/PromGameMobile/res/values/app_styles.xml
@@ -21,12 +21,13 @@
         <item name="android:background">@drawable/btn_white_holo_light</item>
         <item name="android:minHeight">48dip</item>
         <item name="android:minWidth">64dip</item>
-        <item name="android:textColor">#000000</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/button_primary_text_size</item>
     </style>
     
     <style name="FacebookButtonAppTheme" parent="WhiteButtonAppTheme">
         <item name="android:background">@drawable/btn_facebook_holo_light</item>
-        <item name="android:textColor">#ffffff</item>
+        <item name="android:textColor">@color/white</item>
     </style>
     
     <style name="WhiteImageButtonAppTheme" parent="android:Widget.ImageButton">
