--- a/android/PromGameMobile/res/layout/signup_step2_fragment.xml
+++ b/android/PromGameMobile/res/layout/signup_step2_fragment.xml
@@ -30,9 +30,7 @@
             android:layout_height="wrap_content"
             android:text="@string/birthday"
             android:textAllCaps="true"
-            android:textColor="@color/dark_gray"
-            android:textStyle="bold"
-            android:textSize="16sp"  />
+            style="@style/BlueSectionHeader" />
 
         <EditText
             android:id="@+id/birthday_edit"
@@ -47,9 +45,7 @@
             android:layout_height="wrap_content"
             android:text="@string/address"
             android:textAllCaps="true"
-            android:textColor="@color/dark_gray"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+            style="@style/BlueSectionHeader" />
 
         <LinearLayout
             android:layout_width="match_parent"
