--- a/android/PromGameMobile/res/values/styles.xml
+++ b/android/PromGameMobile/res/values/styles.xml
@@ -5,4 +5,19 @@
         <item name="android:gravity">center</item>
         <item name="android:background">@drawable/step_circle</item>
     </style>
+    
+    <style name="SectionHeader" parent="android:Widget.Holo.Light.TextView">
+        <item name="android:drawableBottom">@drawable/section_header</item>
+        <item name="android:drawablePadding">4dp</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:paddingLeft">4dp</item>
+        <item name="android:textColor">@color/dark_gray</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    
+    <style name="BlueSectionHeader" parent="SectionHeader">
+        <item name="android:drawableBottom">@drawable/blue_section_header</item>
+        <item name="android:textColor">@color/blue</item>
+    </style>
 </resources>
