--- a/android/PromGameMobile/res/menu/menu_quiz.xml
+++ b/android/PromGameMobile/res/menu/menu_quiz.xml
@@ -2,5 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item
         android:id="@+id/menu_submit"
-        android:title="@string/submit" />
+        android:title="@string/submit"
+        android:icon="@drawable/btn_check_buttonless_on"
+        android:showAsAction="always" />
 </menu>
