--- a/android/PromGameMobile/res/layout/promotion_activity.xml
+++ b/android/PromGameMobile/res/layout/promotion_activity.xml
@@ -1,98 +1,105 @@
-<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/LinearLayout1"
+<?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scroll_view1"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/light_gray" >
-
-    <ImageView
-        android:id="@+id/image_view"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:scaleType="fitCenter"
-        android:contentDescription="Promotion_image"
-        android:src="@drawable/abs__ab_bottom_solid_dark_holo" />
+    android:layout_height="match_parent" >
 
     <LinearLayout
+        android:id="@+id/LinearLayout1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="@dimen/gap" >
+        android:layout_height="match_parent"
+        android:background="@color/light_gray"
+        android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/name_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="@dimen/gap"
-            android:layout_marginBottom="@dimen/gap"
-            android:text="Name"
-            android:textStyle="bold"
-            android:textSize="22sp" />
-
-        <TextView
-            android:id="@+id/description_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nibh diam, accumsan a eleifend eget, adipiscing vel eros. Proin in erat vitae lorem malesuada imperdiet. Nam eu mi sapien, sed blandit ligula. Donec luctus elit a purus viverra bibendum."
-            android:textSize="14sp" />
+        <ImageView
+            android:id="@+id/image_view"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:contentDescription="Promotion_image"
+            android:paddingTop="15dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/abs__ab_bottom_solid_dark_holo" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/gap" >
+            android:orientation="vertical"
+            android:padding="@dimen/gap" >
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/name_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="End Date"
-                android:textStyle="bold"
-                android:textSize="18sp"
-                android:layout_marginRight="@dimen/gap" />
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="@dimen/gap"
+                android:layout_marginTop="@dimen/gap"
+                android:text="Name"
+                android:textSize="22sp"
+                android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/end_date_text"
+                android:id="@+id/description_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="22-12-2013"
-                android:textSize="16sp" />
+                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nibh diam, accumsan a eleifend eget, adipiscing vel eros. Proin in erat vitae lorem malesuada imperdiet. Nam eu mi sapien, sed blandit ligula. Donec luctus elit a purus viverra bibendum."
+                android:textSize="14sp" />
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/gap" >
+
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/gap"
+                    android:text="End Date"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/end_date_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="22-12-2013"
+                    android:textSize="16sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/gap"
+                android:layout_marginBottom="@dimen/gap" >
+
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/gap"
+                    android:text="Win Points"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/win_points_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="50000"
+                    android:textSize="16sp" />
+            </LinearLayout>
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/play_button"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/gap" >
-
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Win Points"
-                android:textStyle="bold"
-                android:textSize="18sp"
-                android:layout_marginRight="@dimen/gap" />
-
-            <TextView
-                android:id="@+id/win_points_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="50000"
-                android:textSize="16sp" />
-
-        </LinearLayout>
-
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
+            android:background="@color/dark_green"
+            android:text="Slide to play"
+            android:textColor="@color/white" 
+            />
     </LinearLayout>
 
-    <Button
-        android:id="@+id/play_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="30dp"
-        android:text="Slide to play"
-        android:background="@color/dark_green"
-        android:textColor="@color/white" />
-    
-</LinearLayout>
+</ScrollView>
