--- a/android/PromGameMobile/res/layout/promotions_list_row.xml
+++ b/android/PromGameMobile/res/layout/promotions_list_row.xml
@@ -2,23 +2,24 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    
      >
 
     <pt.techzebra.promgamemobile.staggeredgridview.ScaleImageView
         android:id="@+id/imageView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@null"
+        android:src="@drawable/highlight_overlay"
         />
 
     <TextView
         android:id="@+id/description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
         android:layout_margin="1dp"
-        android:gravity="bottom"
         android:text="@string/prom_sample"
         android:textColor="@color/black"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:shadowColor="@color/black" />
 
 </FrameLayout>
